--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -4,3 +4,6 @@
 1.0.1:
     - Add is_protected value to all records
     - settings_add_is_protected.php
+1.0.2:
+    - Added cache clear function
+    - Fixed migrations and not-installed bug
